# Jarvis

./: .gitignore  Cargo.toml  Dockerfile  File.json  FileMananger.json  d.txt  docker-compose.yml  jarvis.db  sendfile.py
archieve/: FileMananger.json 00-03-01-466.jsonaadfasdf
jarvis/: README.md  index.html  package-lock.json  package.json
jarvis/src/assets/: main.css
jarvis/src/components/: SideBar.vue  SideBarElement.vue  TheWelcome.vue  sidebar.ts
jarvis/src/router/: index.ts
jarvis/src/stores/: counter.ts
jarvis/src/views/: HomeView.vue
src/: cli.rs  filecleaner.rs  filesystem.rs  lib.rs  main.rs
src/cli/commands/: manager.rs  mod.rs  sync.rs  utils.rs
src/diskmanager/: mod.rs
src/filemanger/: filecleaner.rs  filemanger.rs  mod.rs
src/ftpss/client/: mod.rs
src/ftpss/server/: mod.rs
src/syner/: mod.rs
