[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.19"
bincode = "1.3.3"
sqlite = "0.30.3"
actix-web = "4"
actix-multipart = "0.6.0"
md5 = "0.7.0"
bytes = "1.4.0"

[dependencies.redis]
version = "*"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
