[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

#[profile.raspberry]
#inherits = "dev"
#opt-level = 3
#lto = true
#target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive","serde_derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.19"
bincode = "1.3.3"
sqlite = "0.30.3"
actix-web = "4"
actix-multipart = "0.6.0"
md5 = "0.7.0"
bytes = "1.4.0"
image = "0.24.5"
encoding_rs = "0.8.32"
reqwest = { version = "0.11.15", features = ["blocking","json"] }
ctrlc = "3.2.5"
lazy_static = "1.4.0"
url = "2.3.1"

[dependencies.redis]
version = "*"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[[bin]]
name = "webserver"
path = "src/webserver/bin/main.rs"

[[bin]]
name = "cli"
path = "src/cli/bin/main.rs"

[[bin]]
name = "diskmanager"
path = "src/diskmanager/bin/main.rs"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"
